--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+
+*
+{
+  @import '../node_modules/@syncfusion/ej2-material-theme/styles/material.css';
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
+
